--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,6 +10,10 @@
 		<spring.version>4.3.3.RELEASE</spring.version>
 		<java.version>1.8</java.version>
 		<aspectj.version>1.8.9</aspectj.version>
+		<spring.shell.version>1.2.0.RELEASE</spring.shell.version>
+		<log4j.version>1.2.17</log4j.version>
+		<junit.version>4.10</junit.version>
+		<jar.mainclass>org.springframework.shell.Bootstrap</jar.mainclass>
 	</properties>
 
 	<repositories>
@@ -21,6 +25,14 @@
 		<repository>
 			<id>oss.sonatype.org</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</repository>
+		<repository>
+			<id>libs-milestone</id>
+			<url>http://repo.spring.io/libs-milestone/</url>
+		</repository>
+		<repository>
+			<id>libs-release</id>
+			<url>http://repo.spring.io/libs-release/</url>
 		</repository>
 	</repositories>
 
@@ -64,8 +76,8 @@
 				<version>1.8</version>
 				<configuration>
 					<showWeaveInfo>true</showWeaveInfo>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<Xlint>ignore</Xlint>
 					<complianceLevel>${java.version}</complianceLevel>
 					<encoding>UTF-8</encoding>
@@ -102,6 +114,11 @@
 	</build>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.mapdb</groupId>
 			<artifactId>mapdb</artifactId>
@@ -198,7 +215,18 @@
 			<version>2.7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-juli</artifactId>
+			<version>7.0.19</version>
+		</dependency>
+
 		<!-- spring -->
+		<dependency>
+			<groupId>org.springframework.shell</groupId>
+			<artifactId>spring-shell</artifactId>
+			<version>${spring.shell.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -227,6 +255,11 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
