--- a/core/pom.xml
+++ b/core/pom.xml
@@ -245,7 +245,7 @@
 		<!-- spring web -->
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
+			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
