--- a/core/pom.xml
+++ b/core/pom.xml
@@ -210,10 +210,16 @@
 			<version>2.7</version>
 		</dependency>
 
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.tomcat</groupId> -->
+<!-- 			<artifactId>tomcat-juli</artifactId> -->
+<!-- 			<version>7.0.19</version> -->
+<!-- 		</dependency> -->
+
 		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-juli</artifactId>
-			<version>7.0.19</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 		</dependency>
 
 		<!-- spring -->
