--- a/core/resources/application.properties
+++ b/core/resources/application.properties
@@ -1,6 +1,3 @@
-spring.main.web-environment=false
+spring.main.web-environment=true
 
-# spring logging
-logging.level.root=INFO
-logging.level.org.springframework=INFO
-logging.level.org.hibernate=ERROR
+
