refactored spring shell and some services

--- a/core/resources/spring/web.xml
+++ b/core/resources/spring/web.xml
@@ -15,5 +15,6 @@
 		http://www.springframework.org/schema/aop http://www.springframework.org/schema/aop/spring-aop-4.2.xsd
 		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util-4.2.xsd">
 
+<!-- 	<bean name="dispatcherServlet" class="org.springframework.web.servlet.DispatcherServlet" /> -->
 
 </beans>
