--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -136,6 +136,11 @@
 			<artifactId>spot-core-model</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>at.spot.core.infrastructure-base</groupId>
+			<artifactId>spot-core-infrastructure-base</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 
 		<!-- aspectj -->
 		<dependency>
@@ -258,34 +263,6 @@
 			<groupId>org.springframework.shell</groupId>
 			<artifactId>spring-shell</artifactId>
 			<version>${spring.shell.version}</version>
-		</dependency>
-
-		<!-- spring core -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aspects</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springmodules</groupId>
-			<artifactId>spring-modules-validation</artifactId>
-			<version>0.8</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<!-- spark rest framework -->
