--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -39,6 +39,17 @@
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>testsrc</testSourceDirectory>
+		<resources>
+			<resource>
+				<directory>resource</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>resource</directory>
+			</testResource>
+		</testResources>
 
 		<plugins>
 			<plugin>
@@ -109,6 +120,11 @@
 
 	<dependencies>
 		<!-- spot modules -->
+		<dependency>
+			<groupId>at.spot.core.model-infrastructure</groupId>
+			<artifactId>spot-core-model-infrastructure</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>at.spot.core.model</groupId>
 			<artifactId>spot-core-model</artifactId>
@@ -223,16 +239,16 @@
 			<version>2.7</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.slf4j</groupId> -->
-<!-- 			<artifactId>slf4j-api</artifactId> -->
-<!-- 			<version>1.7.5</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.slf4j</groupId> -->
-<!-- 			<artifactId>slf4j-log4j12</artifactId> -->
-<!-- 			<version>1.7.5</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>slf4j-api</artifactId> -->
+		<!-- <version>1.7.5</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.slf4j</groupId> -->
+		<!-- <artifactId>slf4j-log4j12</artifactId> -->
+		<!-- <version>1.7.5</version> -->
+		<!-- </dependency> -->
 
 		<!-- spring -->
 
