--- a/spot-core-model-infrastructure/pom.xml
+++ b/spot-core-model-infrastructure/pom.xml
@@ -6,6 +6,19 @@
 	<version>0.0.1</version>
 
 	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>testsrc</testSourceDirectory>
+		<resources>
+			<resource>
+				<directory>resource</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>resource</directory>
+			</testResource>
+		</testResources>
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
