--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -238,7 +238,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
-
+		
+		<!-- logging -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21</version>
+		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.slf4j</groupId> -->
 		<!-- <artifactId>slf4j-api</artifactId> -->
