--- a/spot-core/resource/log4j.properties
+++ b/spot-core/resource/log4j.properties
@@ -1,6 +1,7 @@
 # Root logger option
 log4j.rootLogger=DEBUG, file
 
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
@@ -14,5 +15,8 @@ log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-
 log4j.logger.ch.qos.logback=WARN, file
+log4j.logger.org.reflections=WARN, file
+log4j.logger.org.eclipse.jetty=WARN, file
+log4j.logger.spark.embeddedserver=WARN, file
+
