--- a/spot-core/resource/core.properties
+++ b/spot-core/resource/core.properties
@@ -1,5 +1,7 @@
 spot.core.version=0.0.4
 
-service.typesystem.restservice.port=9000
+service.type.rest.port=9000
+service.model.rest.port=9001
+
 service.persistence.mapdb.filepath=/var/tmp/spot-core.db
 
