--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -173,6 +173,12 @@
 		<!-- -->
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-jexl3</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 			<version>0.9.10</version>
@@ -238,7 +244,7 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
-		
+
 		<!-- logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -273,5 +279,4 @@
 		</dependency>
 	</dependencies>
 	<artifactId>spot-core</artifactId>
-	<packaging>pom</packaging>
 </project>
