--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -15,7 +15,22 @@
 		<aspectj.version>1.8.9</aspectj.version>
 		<log4j.version>1.2.17</log4j.version>
 		<junit.version>4.10</junit.version>
+
+		<!-- for deployment -->
+		<myMavenRepo.write.url>https://mymavenrepo.com/repo/OAXA3zueFpNfePLPKMV3/</myMavenRepo.write.url>
+		<myMavenRepo.read.url>https://mymavenrepo.com/repo/3ouNW8GM7pIvFC4OycLg/</myMavenRepo.read.url>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>spot.mymavenreop.com</id>
+			<url>${myMavenRepo.write.url}</url>
+		</repository>
+		<snapshotRepository>
+			<id>spot.mymavenreop.como</id>
+			<url>${myMavenRepo.write.url}</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<repositories>
 		<repository>
@@ -35,6 +50,12 @@
 			<id>libs-release</id>
 			<url>http://repo.spring.io/libs-release/</url>
 		</repository>
+
+		<!-- public read repo -->
+		<repository>
+			<id>spOt-mvn-repo</id>
+			<url>${myMavenRepo.read.url}</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -52,6 +73,7 @@
 		</testResources>
 
 		<plugins>
+			<!-- building -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
