updated pom with spot nexus maven repo settings

--- a/spot-core-model-infrastructure/pom.xml
+++ b/spot-core-model-infrastructure/pom.xml
@@ -13,45 +13,26 @@
 		<log4j.version>1.2.17</log4j.version>
 		<junit.version>4.10</junit.version>
 
-		<!-- for deployment -->
-		<myMavenRepo.write.url>https://mymavenrepo.com/repo/OAXA3zueFpNfePLPKMV3/</myMavenRepo.write.url>
-		<myMavenRepo.read.url>https://mymavenrepo.com/repo/3ouNW8GM7pIvFC4OycLg/</myMavenRepo.read.url>
+		<!-- nexus repositry -->
+		<nexus.snapshot.host>http://5.249.148.46:8081/repository/spot-snapshot/</nexus.snapshot.host>
+		<nexus.release.host>http://5.249.148.46:8081/repository/spot-release/</nexus.release.host>
 	</properties>
 
 	<distributionManagement>
 		<repository>
-			<id>spot.mymavenreop.com</id>
-			<url>${myMavenRepo.write.url}</url>
+			<id>spot-nexus-release</id>
+			<url>${nexus.release.host}</url>
 		</repository>
 		<snapshotRepository>
-			<id>spot.mymavenreop.como</id>
-			<url>${myMavenRepo.write.url}</url>
+			<id>spot-nexus-snapshot</id>
+			<url>${nexus.snapshot.host}</url>
 		</snapshotRepository>
 	</distributionManagement>
 
 	<repositories>
 		<repository>
-			<id>mvnrepository</id>
-			<name>mvnrepository</name>
-			<url>http://www.mvnrepository.com</url>
-		</repository>
-		<repository>
-			<id>oss.sonatype.org</id>
-			<url>http://oss.sonatype.org/content/repositories/snapshots/</url>
-		</repository>
-		<repository>
-			<id>libs-milestone</id>
-			<url>http://repo.spring.io/libs-milestone/</url>
-		</repository>
-		<repository>
-			<id>libs-release</id>
-			<url>http://repo.spring.io/libs-release/</url>
-		</repository>
-
-		<!-- public read repo -->
-		<repository>
-			<id>spOt-mvn-repo</id>
-			<url>${myMavenRepo.read.url}</url>
+			<id>spot-nexus-snapshot</id>
+			<url>${nexus.snapshot.host}</url>
 		</repository>
 	</repositories>
 
