property and spring loading refactoring

--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -85,8 +85,7 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
-							<minimizeJar>true</minimizeJar>
-							<outputFile>${project.build.directory}/spot-core-${version}-fat.jar</outputFile>
+							<outputFile>${project.build.directory}/spot-core-${project.version}-fat.jar</outputFile>
 						</configuration>
 					</execution>
 				</executions>
