--- a/spot-mail/pom.xml
+++ b/spot-mail/pom.xml
@@ -87,50 +87,50 @@
 				</configuration>
 			</plugin>
 
-			<!-- <plugin> -->
-			<!-- <groupId>org.codehaus.mojo</groupId> -->
-			<!-- <artifactId>aspectj-maven-plugin</artifactId> -->
-			<!-- <version>1.8</version> -->
-			<!-- <configuration> -->
-			<!-- <showWeaveInfo>true</showWeaveInfo> -->
-			<!-- <source>1.8</source> -->
-			<!-- <target>1.8</target> -->
-			<!-- <Xlint>ignore</Xlint> -->
-			<!-- <complianceLevel>${java.version}</complianceLevel> -->
-			<!-- <encoding>UTF-8</encoding> -->
-			<!-- <verbose>true</verbose> -->
-			<!-- <aspectLibraries> -->
-			<!-- <aspectLibrary> -->
-			<!-- <groupId>org.springframework</groupId> -->
-			<!-- <artifactId>spring-aspects</artifactId> -->
-			<!-- </aspectLibrary> -->
-			<!-- <aspectLibrary> -->
-			<!-- <groupId>at.spot.core</groupId> -->
-			<!-- <artifactId>spot-core</artifactId> -->
-			<!-- </aspectLibrary> -->
-			<!-- </aspectLibraries> -->
-			<!-- </configuration> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <goals> -->
-			<!-- <goal>compile</goal> -->
-			<!-- <goal>test-compile</goal> -->
-			<!-- </goals> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- <dependencies> -->
-			<!-- <dependency> -->
-			<!-- <groupId>org.aspectj</groupId> -->
-			<!-- <artifactId>aspectjrt</artifactId> -->
-			<!-- <version>${aspectj.version}</version> -->
-			<!-- </dependency> -->
-			<!-- <dependency> -->
-			<!-- <groupId>org.aspectj</groupId> -->
-			<!-- <artifactId>aspectjtools</artifactId> -->
-			<!-- <version>${aspectj.version}</version> -->
-			<!-- </dependency> -->
-			<!-- </dependencies> -->
-			<!-- </plugin> -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.8</version>
+				<configuration>
+					<showWeaveInfo>true</showWeaveInfo>
+					<source>1.8</source>
+					<target>1.8</target>
+					<Xlint>ignore</Xlint>
+					<complianceLevel>${java.version}</complianceLevel>
+					<encoding>UTF-8</encoding>
+					<verbose>true</verbose>
+					<aspectLibraries>
+						<aspectLibrary>
+							<groupId>org.springframework</groupId>
+							<artifactId>spring-aspects</artifactId>
+						</aspectLibrary>
+						<aspectLibrary>
+							<groupId>at.spot.core</groupId>
+							<artifactId>spot-core</artifactId>
+						</aspectLibrary>
+					</aspectLibraries>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>test-compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjrt</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjtools</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
