--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>at.spot.core.support</groupId>
+	<groupId>at.spot</groupId>
 	<artifactId>spot-core-support</artifactId>
-	<version>0.0.1</version>
+	<version>1.0-SNAPSHOT</version>
+	<name>spOt core support</name>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -33,6 +34,13 @@
 		<repository>
 			<id>spot-nexus-snapshot</id>
 			<url>${nexus.snapshot.host}</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>10</updatePolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
