--- a/spot-mail/pom.xml
+++ b/spot-mail/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>at.spot.mail</groupId>
-	<artifactId>spot-mail</artifactId>
-	<version>0.0.2</version>
+	<groupId>at.spot</groupId>
+	<artifactId>spot-mail-server</artifactId>
+	<version>1.0-SNAPSHOT</version>
 	<name>spOt mail server</name>
 
 	<properties>
@@ -37,6 +37,13 @@
 		<repository>
 			<id>spot-nexus-snapshot</id>
 			<url>${nexus.snapshot.host}</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>10</updatePolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
@@ -72,7 +79,7 @@
 						</goals>
 						<configuration>
 							<minimizeJar>true</minimizeJar>
-							<outputFile>${project.build.directory}/spot-core-${version}-fat.jar</outputFile>
+							<outputFile>${project.build.directory}/${artifactId}-${version}-fat.jar</outputFile>
 						</configuration>
 					</execution>
 				</executions>
@@ -105,7 +112,7 @@
 							<artifactId>spring-aspects</artifactId>
 						</aspectLibrary>
 						<aspectLibrary>
-							<groupId>at.spot.core</groupId>
+							<groupId>at.spot</groupId>
 							<artifactId>spot-core</artifactId>
 						</aspectLibrary>
 					</aspectLibraries>
@@ -136,9 +143,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>at.spot.core</groupId>
+			<groupId>at.spot</groupId>
 			<artifactId>spot-core</artifactId>
-			<version>0.0.6</version>
+			<version>1.0-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
@@ -148,15 +155,15 @@
 		</dependency>
 
 		<dependency>
-			<groupId>at.spot.core.model-infrastructure</groupId>
+			<groupId>at.spot</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>0.0.1</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
-			<groupId>at.spot.core.model</groupId>
-			<artifactId>spot-core-model</artifactId>
-			<version>0.0.1</version>
+			<groupId>at.spot</groupId>
+			<artifactId>spot-core-base-models</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- third party libs -->
