--- a/spot-core-base-models/pom.xml
+++ b/spot-core-base-models/pom.xml
@@ -72,9 +72,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>at.spot.core.model-infrastructure</groupId>
+			<groupId>at.spot</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>0.0.1</version>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
